--- a/rnn.yml
+++ b/rnn.yml
@@ -20,7 +20,6 @@ dependencies:
   - setuptools=78.1.1=py39h06a4308_0
   - sqlite=3.45.3=h5eee18b_0
   - tk=8.6.14=h39e8969_0
-  - tzdata=2025b=h04d1e81_0
   - wheel=0.45.1=py39h06a4308_0
   - xz=5.6.4=h5eee18b_1
   - zlib=1.2.13=h5eee18b_1
@@ -54,9 +53,11 @@ dependencies:
       - nvidia-nvjitlink-cu12==12.6.85
       - nvidia-nvtx-cu12==12.6.77
       - packaging==25.0
+      - pandas==2.3.1
       - pillow==11.2.1
       - pyparsing==3.2.3
       - python-dateutil==2.9.0.post0
+      - pytz==2025.2
       - scikit-learn==1.6.1
       - scipy==1.13.1
       - six==1.17.0
@@ -66,5 +67,6 @@ dependencies:
       - tqdm==4.67.1
       - triton==3.3.0
       - typing-extensions==4.13.2
+      - tzdata==2025.2
       - zipp==3.22.0
 prefix: /home/clevyfidel/anaconda3/envs/rnn
